app/static/styles/main.css
p, h1, h2, h3, h4, h5, h6, button {
    font-family: "Roboto", serif;
}

body {
    background-color: #f5f5f9;
    background-size: cover;
    width: auto; 
    overflow-x: hidden;
    font-family: "Roboto", serif;
    margin: 0px;
}

.nav-bar ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.nav-bar li {
  float: left;
}

.nav-bar li a {
  display: block;
  color: #fff;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

.nav-bar li a:hover {
  background-color: #111;
}

.nav-bar {
    width: 100%;
    background-color: #1C539F;
    font-family: "Roboto", serif;
    font-weight: 700 !important;
    padding: 10px;
}

/*.navbar {*/
/*    background-color: #1C539F;*/
/*    padding: 10px;*/
/*    color: #fff;*/
/*    width: 100%;*/
/*}*/
.nav-content .logo-touch-target {
    display: inline-flex;
    height: 60%;
    width: 350px;
}

.nav-content .nav-logo {
    height: 60px;
    margin: auto;
}

.nav-logo {
    display: flex;
    align-items: center;
    justify-content: center;
}

.nav-logo img {
    width: 200px;
}

.nav-content nav {
    display: block;
    width: 100%;
    text-align: right;
    padding-top: 0px;
    padding-right: 0px;
}

.profile {
    background-color: #1d539f !important;
    text-align: center;
    height: 320px;
    margin-bottom: 50px;
}

.profile h1 {
        font-size: 50px;
        font-weight: 700;
        color: white;
}

.profile img {
        border-radius: 50%;
        max-width: 100%;
        max-height: 100%;
        margin-left: auto;
        margin-right: auto;
        display: block;        
        padding: 20px;
}

.profile .profile-picture {
    margin-bottom: 30px;
    height: 200px;
}

.banner {
    padding: 20px 0px 50px 0px;
    height: 150px;
    background-color: #1d539f;
}

.banner .logo {
    max-width:180px;
    max-height:60px;
    width: auto;
    height: auto;
}

.banner .title {
    color: white;
    font-size: 50px;
    font-weight: 700;
}

.block {
    background-color: #fff;
    padding: 20px;
    margin-bottom: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 25px;
    margin-right: 25px;
}

.block img {
    border-radius: 12.5%;
    max-width: 100%;
    max-height: 100%;
    padding: 20px;
}

.block .text {
    padding: 100px;
}

